--- a/css/timer.css
+++ b/css/timer.css
@@ -3,7 +3,7 @@
     position: relative;
     width: 75px;
     height: 75px;
-    float:right;
+    justify-content: center;
     color:wheat;
   }
   
