--- a/css/typography.css
+++ b/css/typography.css
@@ -49,6 +49,14 @@ input[type="text"]
     font-family: 'quiz-question', sans-serif;
 }
 
+#time-left{
+    font-family: 'quiz-question', sans-serif;
+}
+
+.main-space{
+    font-family: 'quiz-question', sans-serif;
+}
+
 @media only screen and (min-device-width : 767px) and (max-device-width : 1025px) {
 
     .main-space-ele2{
