--- a/css/style2.css
+++ b/css/style2.css
@@ -161,6 +161,18 @@
     visibility:hidden;
 }
 
+#quiz-loading{
+    position:fixed; /* change this to fixed */
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -80px;
+    width: 200px;
+    height: 100px;
+    color: white;
+}
+
+
 @media screen and (max-width: 347px) {
 
 .ans-op{
@@ -168,3 +180,12 @@
 }
 
 }
+
+/* @media  screen and (min-width: 320px) { 
+
+    #quiz-loading{
+        color: white;
+        padding-left: 20%;
+        }
+
+} */
